--- a/css/style.production.css
+++ b/css/style.production.css
@@ -6,305 +6,325 @@
 */
 
 * {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
-  
-  body {
-      background-color:  #efeee8;
-      color: #2b2b2b;
-      font-family: 'Roboto', sans-serif;
-      font-weight: 550;
-      min-height: 100vh; 
-  }
-  
-  h1 {
-      font-size: 30px;
-      font-weight: 700;
-      line-height: normal;
-  }
-  
-  h2 {
-      font-size: 24px;
-      font-weight: 700;
-      line-height: normal;
-  }
-  
-  h3 {
-      font-size: 20px;
-      font-weight: 700;
-      line-height: normal;
-  }
-  a {
-      color: blue;
-      font-weight: 700;
-      line-height: normal;
-  }
-  
-  a:hover, a:focus {
-      text-decoration: none;
-      cursor: pointer;
-    }
-  
-  a:visited {
-      color: blueviolet;
-  }
-  
-  a:active {
-      color: brown;
-  }
-  
-  input[type=submit] {
-      border-radius: 3cqw;
-      border-color: #2b2b2b;
-  }
-  
-  input[type=submit]:hover {
-      border-color: #d3d3d3;
-      cursor: pointer;
-  }
-  
-  input[type=submit]:focus {
-      border-color: #d3d3d3;
-      cursor: pointer;
-  }
-  
-  .profile {
-      max-width: 700px;
-      margin: 0 auto;
-    }
-  
-    .profile__portrait {
-      float: left;
-      max-width: 250px;
-      max-height: 250px;
-      margin-right: 40px;
-      border-radius: 50%;
-    }
-  
-  
-  .page-footer {
-      clear: both;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      text-align: center;
-  }
-  
-  .about-me {
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-    .about-list li {
-    list-style-type: none;
-    margin: 0 auto;
-    }
-  
-  .page-header {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      width: 100%;
-      padding: 20px;
-      margin: 0 auto;
-      border-bottom: #2b2b2b;
-    }
-  
-    .page-header__item {
-      -webkit-box-flex: 0;
-          -ms-flex: 0 1 200px;
-              flex: 0 1 200px;
-      padding-right: 50px;
-    }
-  
-    .page-header__item:last-child {
-      -webkit-box-flex: 1;
-          -ms-flex-positive: 1;
-              flex-grow: 1;
-      text-align: right;
-    }
-  
-  .navigation-list {
-    list-style-type: none;
-  }
-  
-  .navigation-list li {
-    display: inline-block;
-    margin-left: 15px; 
-  }
-  
-  /*start grid fallback*/
-  .grid__item {
-    display: inline-block;
-    width: 33%;
-  }
-  
-  @supports (display: grid) {
-    .grid {
-      display: -ms-grid;
-      display: grid;
-      -ms-grid-columns: 1fr 20px 1fr;
-      grid-template-columns: 1fr 1fr;
-      grid-gap: 20px;
-      margin: 0;
-   
-    }
-    .grid__item {
-      background-color: #d3d3d3;
-      width: auto;
-      min-height: auto;
-      margin: 0;
-    }
-    }
-   /*end grid fallback*/
-  
-  button,
-  #linkedin-button,
-  .button {
-    border: none;
-    display: inline-block;
-    font-family: inherit;
-    background-color: #5f5f5c;
-    color: white;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+    background-color:  #efeee8;
+    color: #2b2b2b;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 550;
+    min-height: 100vh; 
+}
+
+h1 {
+    font-size: 30px;
+    font-weight: 700;
+    line-height: normal;
+}
+
+h2 {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: normal;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: normal;
+}
+a {
+    color: blue;
+    font-weight: 700;
+    line-height: normal;
+}
+
+a:hover, a:focus {
     text-decoration: none;
-    padding: 6px;
-    border-radius: 5px;
-    text-align: center;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    -webkit-transition: opacity 0.2s;
-    -o-transition: opacity 0.2s;
-    transition: opacity 0.2s;
-  }
-  
-  button:hover,
-  button:focus,
-  .button:hover,
-  .button:focus {
     cursor: pointer;
-    opacity: 0.8;
   }
-  
-  @-webkit-keyframes color-change {
-    0% {
-      fill: #edc655;
-    }
-    50% {
-      fill: #fcffad;
-    }
-    100%{
-      fill: #f76414;
-    }
+
+a:visited {
+    color: blueviolet;
+}
+
+a:active {
+    color: brown;
+}
+
+input[type=text], select, textarea {
+  width: 100%; 
+  padding: 12px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  -webkit-box-sizing: border-box; 
+          box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+  resize: vertical 
+}
+
+
+input[type=submit] {
+  background-color: #2b2b2b;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+input[type=submit]:hover {
+  background-color: gray;
+}
+
+ 
+.contact-form {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.profile {
+    max-width: 700px;
+    margin: 0 auto;
   }
-  
-  @keyframes color-change {
-    0% {
-      fill: #edc655;
-    }
-    50% {
-      fill: #fcffad;
-    }
-    100%{
-      fill: #f76414;
-    }
+
+  .profile__portrait {
+    float: left;
+    max-width: 250px;
+    max-height: 250px;
+    margin-right: 40px;
+    border-radius: 50%;
   }
-  
-  @-webkit-keyframes cloud-move {
-    from {
-      -webkit-transform: translate(0,50px);
-              transform: translate(0,50px);
-    }
-    to {
-      -webkit-transform: translate(200px, 50px);
-              transform: translate(200px, 50px);
-    }
+
+
+.page-footer {
+    clear: both;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+}
+
+.about-me {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+  .about-list li {
+  list-style-type: none;
+  margin: 0 auto;
   }
-  
-  @keyframes cloud-move {
-    from {
-      -webkit-transform: translate(0,50px);
-              transform: translate(0,50px);
-    }
-    to {
-      -webkit-transform: translate(200px, 50px);
-              transform: translate(200px, 50px);
-    }
+
+.page-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    padding: 20px;
+    margin: 0 auto;
+    border-bottom: #2b2b2b;
   }
-  
-  @-webkit-keyframes cloud-move-reverse {
-    from {
-      -webkit-transform: translate(446px, 48px);
-              transform: translate(446px, 48px);
-    }
-    to {
-      -webkit-transform: translate(100px, 48px);
-              transform: translate(100px, 48px);
-    }
+
+  .page-header__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 200px;
+            flex: 0 1 200px;
+    padding-right: 50px;
   }
-  
-  @keyframes cloud-move-reverse {
-    from {
-      -webkit-transform: translate(446px, 48px);
-              transform: translate(446px, 48px);
-    }
-    to {
-      -webkit-transform: translate(100px, 48px);
-              transform: translate(100px, 48px);
-    }
+
+  .page-header__item:last-child {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    text-align: right;
   }
-  
-  .cloud-back {
-    -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-            animation: 34s cloud-move-reverse infinite alternate linear;
+
+.navigation-list {
+  list-style-type: none;
+}
+
+.navigation-list li {
+  display: inline-block;
+  margin-left: 15px; 
+}
+
+
+/*start grid fallback*/
+.grid__item {
+  display: inline-block;
+  width: 33%;
+}
+
+@supports (display: grid) {
+  .grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    margin: 0;
+ 
   }
-  
-  .cloud-front {
-    -webkit-animation: 30s cloud-move infinite alternate linear;
-            animation: 30s cloud-move infinite alternate linear;
+  .grid__item {
+    background-color: #d3d3d3;
+    width: auto;
+    min-height: auto;
+    margin: 0;
   }
-  
-  .sun {
-    -webkit-animation: 4s color-change infinite alternate linear;
-            animation: 4s color-change infinite alternate linear;
   }
-  
-   /*start media queries*/
-   @media all and (max-width: 500px) {
-    .grid {
-      -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-    }
-   }
-  
-   @media all and (min-width: 500px) and (max-width: 750px) {
-    .grid {
-      -ms-grid-columns: 1fr 20px 1fr;
-      grid-template-columns: 1fr 1fr;
-    }
-   }
-   @media all and (max-width: 750px) {
-    .grid {
-      grid-gap: 10px;
-    }
-    .grid__item:last-child {
-      grid-column: auto/auto;
-      grid-row: auto/auto;
-    }
-    h1 {
-      font-size: 22px;
-    }
-   }
-   
-  
-  /*
-  Colors used
-  
-  Text Color : #2b2b2b;
-  Primary Color : #efeee8;
-  Secondary Color (lightgray): #d3d3d3;
-   */
+ /*end grid fallback*/
+
+button,
+#linkedin-button,
+.button {
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: #5f5f5c;
+  color: white;
+  text-decoration: none;
+  padding: 6px;
+  border-radius: 5px;
+  text-align: center;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+button:hover,
+button:focus,
+.button:hover,
+.button:focus {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+@-webkit-keyframes color-change {
+  0% {
+    fill: #edc655;
+  }
+  50% {
+    fill: #fcffad;
+  }
+  100%{
+    fill: #f76414;
+  }
+}
+
+@keyframes color-change {
+  0% {
+    fill: #edc655;
+  }
+  50% {
+    fill: #fcffad;
+  }
+  100%{
+    fill: #f76414;
+  }
+}
+
+@-webkit-keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0,50px);
+            transform: translate(0,50px);
+  }
+  to {
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
+  }
+}
+
+@keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0,50px);
+            transform: translate(0,50px);
+  }
+  to {
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
+  }
+}
+
+@-webkit-keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
+  }
+  to {
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
+  }
+}
+
+@keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
+  }
+  to {
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
+  }
+}
+
+.cloud-back {
+  -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
+          animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+.cloud-front {
+  -webkit-animation: 30s cloud-move infinite alternate linear;
+          animation: 30s cloud-move infinite alternate linear;
+}
+
+.sun {
+  -webkit-animation: 4s color-change infinite alternate linear;
+          animation: 4s color-change infinite alternate linear;
+}
+
+ /*start media queries*/
+ @media all and (max-width: 500px) {
+  .grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+ }
+
+ @media all and (min-width: 500px) and (max-width: 750px) {
+  .grid {
+    -ms-grid-columns: 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+ }
+ @media all and (max-width: 750px) {
+  .grid {
+    grid-gap: 10px;
+  }
+  .grid__item:last-child {
+    grid-column: auto/auto;
+    grid-row: auto/auto;
+  }
+  h1 {
+    font-size: 22px;
+  }
+ }
+ 
+
+/*
+Colors used
+
+Text Color : #2b2b2b;
+Primary Color : #efeee8;
+Secondary Color (lightgray): #d3d3d3;
+ */
